fix using isBlank() from newer API